--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -1,4 +1,14 @@
 de:
+  social_share_button:
+    share_to: Teilen via %{name}
+    twitter: Twitter
+    facebook: Facebook
+    email: Email
+    vkontakte: Vkontakte
+    telegram: Telegram
+    whatsapp_app: WhatsApp
+    whatsapp_web: WhatsApp Web
+
   activerecord:
     errors:
       messages:
