--- a/config/locales/discipline.de.yml
+++ b/config/locales/discipline.de.yml
@@ -16,7 +16,7 @@ de:
   simple_form:
     hints:
       discipline:
+        like_fire_relay: Dies sollte bei 4x100m-Feuerwehrstafette ausgewählt werden
         name: 'z.B.: Löschangriff nass'
         short_name: 'z.B.: LA'
-        single_discipline: Dies sollte bei 100m-Hindernisbahn, Hakenleitersteigen und Zweikampf ausgewählt werden
-        like_fire_relay: Dies sollte bei 4x100m-Feuerwehrstafette ausgewählt werden
+        single_discipline: 'Dies sollte bei 100m-Hindernisbahn, Hakenleitersteigen und Zweikampf ausgewählt werden'
