--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -1,32 +1,17 @@
+---
 de:
   a:
     actions: Aktionen
+    add: Hinzufügen
     no_entries_found: Keine Einträge gefunden
     show: Ansehen
-    add: 'Hinzufügen'
-  social_share_button:
-    share_to: Teilen via %{name}
-    twitter: Twitter
-    facebook: Facebook
-    email: Email
-    vkontakte: Vkontakte
-    telegram: Telegram
-    whatsapp_app: WhatsApp
-    whatsapp_web: WhatsApp Web
-
-
-  gender:
-    female: weiblich
-    male: männlich
-    indifferent: ungeschlechtlich
-
   activerecord:
     errors:
       messages:
         record_invalid: 'Gültigkeitsprüfung ist fehlgeschlagen: %{errors}'
         restrict_dependent_destroy:
-          has_many: 'Datensatz kann nicht gelöscht werden, da abhängige %{record} existieren.'
-          has_one: 'Datensatz kann nicht gelöscht werden, da ein abhängiger %{record}-Datensatz existiert.'
+          has_many: Datensatz kann nicht gelöscht werden, da abhängige %{record} existieren.
+          has_one: Datensatz kann nicht gelöscht werden, da ein abhängiger %{record}-Datensatz existiert.
         year_not_valid: hat ein ungültiges Jahr
   date:
     abbr_day_names:
@@ -38,7 +23,7 @@ de:
     - Fr
     - Sa
     abbr_month_names:
-    - null
+    -
     - Jan
     - Feb
     - Mär
@@ -60,11 +45,11 @@ de:
     - Freitag
     - Samstag
     formats:
-      default: '%d.%m.%Y'
-      long: '%e. %B %Y'
-      short: '%e. %b'
+      default: "%d.%m.%Y"
+      long: "%e. %B %Y"
+      short: "%e. %b"
     month_names:
-    - null
+    -
     - Januar
     - Februar
     - März
@@ -78,48 +63,48 @@ de:
     - November
     - Dezember
     order:
-    - ':day'
-    - ':month'
-    - ':year'
+    - ":day"
+    - ":month"
+    - ":year"
   datetime:
     distance_in_words:
       about_x_hours:
         one: etwa eine Stunde
-        other: 'etwa %{count} Stunden'
+        other: etwa %{count} Stunden
       about_x_months:
         one: etwa ein Monat
-        other: 'etwa %{count} Monate'
+        other: etwa %{count} Monate
       about_x_years:
         one: etwa ein Jahr
-        other: 'etwa %{count} Jahre'
+        other: etwa %{count} Jahre
       almost_x_years:
         one: fast ein Jahr
-        other: 'fast %{count} Jahre'
+        other: fast %{count} Jahre
       half_a_minute: eine halbe Minute
       less_than_x_minutes:
         one: weniger als eine Minute
-        other: 'weniger als %{count} Minuten'
+        other: weniger als %{count} Minuten
       less_than_x_seconds:
         one: weniger als eine Sekunde
-        other: 'weniger als %{count} Sekunden'
+        other: weniger als %{count} Sekunden
       over_x_years:
         one: mehr als ein Jahr
-        other: 'mehr als %{count} Jahre'
+        other: mehr als %{count} Jahre
       x_days:
         one: ein Tag
-        other: '%{count} Tage'
+        other: "%{count} Tage"
       x_minutes:
         one: eine Minute
-        other: '%{count} Minuten'
+        other: "%{count} Minuten"
       x_months:
         one: ein Monat
-        other: '%{count} Monate'
+        other: "%{count} Monate"
       x_seconds:
         one: eine Sekunde
-        other: '%{count} Sekunden'
+        other: "%{count} Sekunden"
       x_years:
         one: ein Jahr
-        other: '%{count} Jahre'
+        other: "%{count} Jahre"
     prompts:
       day: Tag
       hour: Stunde
@@ -128,70 +113,74 @@ de:
       second: Sekunde
       year: Jahr
   errors:
-    format: '%{attribute} %{message}'
+    format: "%{attribute} %{message}"
     messages:
       accepted: muss akzeptiert werden
       blank: muss ausgefüllt werden
-      confirmation: 'stimmt nicht mit %{attribute} überein'
+      confirmation: stimmt nicht mit %{attribute} überein
       empty: muss ausgefüllt werden
-      equal_to: 'muss genau %{count} sein'
+      equal_to: muss genau %{count} sein
       even: muss gerade sein
       exclusion: ist nicht verfügbar
-      greater_than: 'muss größer als %{count} sein'
-      greater_than_or_equal_to: 'muss größer oder gleich %{count} sein'
+      greater_than: muss größer als %{count} sein
+      greater_than_or_equal_to: muss größer oder gleich %{count} sein
       inclusion: ist kein gültiger Wert
       invalid: ist nicht gültig
-      less_than: 'muss kleiner als %{count} sein'
-      less_than_or_equal_to: 'muss kleiner oder gleich %{count} sein'
+      less_than: muss kleiner als %{count} sein
+      less_than_or_equal_to: muss kleiner oder gleich %{count} sein
       model_invalid: 'Gültigkeitsprüfung ist fehlgeschlagen: %{errors}'
       not_a_number: ist keine Zahl
       not_an_integer: muss ganzzahlig sein
       odd: muss ungerade sein
-      other_than: 'darf nicht gleich %{count} sein'
+      other_than: darf nicht gleich %{count} sein
       present: darf nicht ausgefüllt werden
       required: muss ausgefüllt werden
       taken: ist bereits vergeben
       too_long:
         one: ist zu lang (mehr als 1 Zeichen)
-        other: 'ist zu lang (mehr als %{count} Zeichen)'
+        other: ist zu lang (mehr als %{count} Zeichen)
       too_short:
         one: ist zu kurz (weniger als 1 Zeichen)
-        other: 'ist zu kurz (weniger als %{count} Zeichen)'
+        other: ist zu kurz (weniger als %{count} Zeichen)
       wrong_length:
         one: hat die falsche Länge (muss genau 1 Zeichen haben)
-        other: 'hat die falsche Länge (muss genau %{count} Zeichen haben)'
+        other: hat die falsche Länge (muss genau %{count} Zeichen haben)
     template:
       body: 'Bitte überprüfen Sie die folgenden Felder:'
       header:
         one: 'Konnte %{model} nicht speichern: ein Fehler.'
         other: 'Konnte %{model} nicht speichern: %{count} Fehler.'
+  gender:
+    female: weiblich
+    indifferent: ungeschlechtlich
+    male: männlich
   helpers:
     select:
       prompt: Bitte wählen
     submit:
-      create: '%{model} erstellen'
-      submit: '%{model} speichern'
-      update: '%{model} aktualisieren'
+      create: "%{model} erstellen"
+      submit: "%{model} speichern"
+      update: "%{model} aktualisieren"
   number:
     currency:
       format:
-        delimiter: .
-        format: '%n %u'
+        delimiter: "."
+        format: "%n %u"
         precision: 2
-        separator: ','
+        separator: ","
         significant: false
         strip_insignificant_zeros: false
-        unit: €
+        unit: "€"
     format:
-      delimiter: .
+      delimiter: "."
       precision: 2
       round_mode: default
-      separator: ','
+      separator: ","
       significant: false
       strip_insignificant_zeros: false
     human:
       decimal_units:
-        format: '%n %u'
+        format: "%n %u"
         units:
           billion:
             one: Milliarde
@@ -213,7 +202,7 @@ de:
         significant: true
         strip_insignificant_zeros: true
       storage_units:
-        format: '%n %u'
+        format: "%n %u"
         units:
           byte:
             one: Byte
@@ -227,19 +216,28 @@ de:
     percentage:
       format:
         delimiter: ''
-        format: '%n %'
+        format: "%n %"
     precision:
       format:
         delimiter: ''
+  social_share_button:
+    email: Email
+    facebook: Facebook
+    share_to: Teilen via %{name}
+    telegram: Telegram
+    twitter: Twitter
+    vkontakte: Vkontakte
+    whatsapp_app: WhatsApp
+    whatsapp_web: WhatsApp Web
   support:
     array:
-      last_word_connector: ' und '
-      two_words_connector: ' und '
-      words_connector: ', '
+      last_word_connector: " und "
+      two_words_connector: " und "
+      words_connector: ", "
   time:
     am: vormittags
     formats:
-      default: '%d.%m.%Y %H:%M Uhr'
-      long: '%A, %d. %B %Y, %H:%M Uhr'
-      short: '%d. %B, %H:%M Uhr'
+      default: "%d.%m.%Y %H:%M Uhr"
+      long: "%A, %d. %B %Y, %H:%M Uhr"
+      short: "%d. %B, %H:%M Uhr"
     pm: nachmittags
