Name in ForcedName umbenennen

--- a/config/locales/assessment.de.yml
+++ b/config/locales/assessment.de.yml
@@ -5,6 +5,7 @@ de:
       assessment:
         band: Wertungsgruppe
         discipline: Disziplin
+        forced_name: Name
         name: Name
     models:
       assessment:
