--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -246,3 +246,21 @@ de:
       long: "%A, %d. %B %Y, %H:%M Uhr"
       short: "%d. %B, %H:%M Uhr"
     pm: nachmittags
+
+  assessment_types:
+    competitor: Teilnahme
+    competitor_order: Teilnahme (%{competitor_order})
+    competitor_short: T
+    competitor_short_order: '%{competitor_order}'
+    group_competitor: Mannschaftswertung
+    group_competitor_order: Mannschaftswertung (%{competitor_order})
+    group_competitor_short: M
+    group_competitor_short_order: M%{competitor_order}
+    single_competitor: Einzelstarter
+    single_competitor_order: Einzelstarter (%{competitor_order})
+    single_competitor_short: E
+    single_competitor_short_order: E%{competitor_order}
+    out_of_competition: Außer der Wertung
+    out_of_competition_order: Außer der Wertung
+    out_of_competition_short: A
+    out_of_competition_short_order: A
