--- a/config/locales/team.de.yml
+++ b/config/locales/team.de.yml
@@ -3,6 +3,7 @@ de:
   activerecord:
     attributes:
       team:
+        tags: Kennzeichnungen
         band: Wertungsgruppe
         federal_state: Bundesland
         lottery_number: Losnummer
