--- a/config/locales/competition.de.yml
+++ b/config/locales/competition.de.yml
@@ -12,11 +12,15 @@ de:
       competition:
         one: Wettkampf
         other: Wettkämpfe
+  activemodel:
+    attributes:
+      competitions/deletion:
+        confirm: Bestätigung
   simple_form:
     hints:
       competition:
         date: Sollte sich der Wettkampf über mehrere Tage erstrecken, gib den Haupttag an. Weiteres musst du in der Beschreibung ergänzen.
         locality: Es sieht besser aus, wenn du hier nur den Namen des Ortes schreibst. Die vollständige Adresse solltest du in der Beschreibung angeben.
         name: Gib einen kurzen Namen an. Das Datum erscheint extra und braucht nicht im Namen auftauchen.
-        slug: Der »Slug« ist der Bestandteil der URL, der in der Adresse deines Browsers angezeigt wird. Änderst du diesen, werden alle von dir bisher verteilten QR-Codes ungültig.
+        slug: Der »Slug« ist der Bestandteil der URL, der in der Adresse deines Browsers angezeigt wird. Änderst du diesen, werden alle von dir bisher verteilten QR-Codes und URLs ungültig.
         visible: Sobald du deinen Wettkampf sichtbar schaltest, wird er allen Besuchern in der Terminliste angezeigt.
