--- a/config/locales/discipline.de.yml
+++ b/config/locales/discipline.de.yml
@@ -17,6 +17,6 @@ de:
     hints:
       discipline:
         like_fire_relay: Dies sollte bei 4x100m-Feuerwehrstafette ausgewählt werden
-        name: 'z.B.: Löschangriff nass'
+        name: 'z.B.: Löschangriff Nass'
         short_name: 'z.B.: LA'
         single_discipline: Dies sollte bei 100m-Hindernisbahn, Hakenleitersteigen und Zweikampf ausgewählt werden
