--- a/config/locales/competition.de.yml
+++ b/config/locales/competition.de.yml
@@ -20,7 +20,7 @@ de:
         other: Wettkämpfe
   competitions:
     registration_open:
-      close: Nur Verwalter können Mannschaften anmelden
+      close: Nur Verwalter (du) können Mannschaften anmelden
       open: Mannschaften können sich selber anmelden
       unstated: Nicht definiert
   simple_form:
