Serien erweitern und testen

--- a/config/locales/series.de.yml
+++ b/config/locales/series.de.yml
@@ -5,4 +5,7 @@ de:
       series/team_assessment:
     models:
       series/person_assessment: Einzelwertung
+      series/round:
+        one: Serie
+        other: Serien
       series/team_assessment: Mannschaftswertung
