--- a/config/locales/person.de.yml
+++ b/config/locales/person.de.yml
@@ -9,6 +9,7 @@ de:
         create_team_name: Neue Mannschaft
         first_name: Vorname
         last_name: Nachname
+        tags: Kennzeichnungen
         team: Mannschaft
     models:
       person: Wettkämpfer
