--- a/config/locales/certificates.de.yml
+++ b/config/locales/certificates.de.yml
@@ -1,5 +1,15 @@
 ---
 de:
+  activemodel:
+    attributes:
+      certificates/list:
+        background_image: Hintergrundbild einbetten
+        competition_result_id: Gesamtwertung
+        group_score_result_id: Mannschaftwertung
+        score_result_id: Ergebnisliste
+        template_id: Urkundenvorlage
+    models:
+      certificates/list: Urkunden
   activerecord:
     attributes:
       certificates/template:
@@ -17,3 +27,9 @@ de:
       certificates/template:
         one: Urkundenvorlage
         other: Urkundenvorlagen
+  certificates:
+    lists:
+      export:
+        points:
+          one: 1 Punkt
+          other: "%{count} Punkte"
