Importieren von Mannschaften
closes #8

--- a/config/locales/team.de.yml
+++ b/config/locales/team.de.yml
@@ -1,5 +1,12 @@
 ---
 de:
+  activemodel:
+    attributes:
+      team_import:
+        band_id: Wertungsgruppe
+        import_rows: Namen
+    models:
+      team_import: Mannschafts-Import
   activerecord:
     attributes:
       team:
