Veröffentlichen mit mehr Daten erweitern

--- a/config/locales/competition.de.yml
+++ b/config/locales/competition.de.yml
@@ -6,6 +6,7 @@ de:
         confirm: Bestätigung
       competitions/publishing:
         confirm: Bestätigung
+        hint: Zusätzlichen Hinweise
   activerecord:
     attributes:
       competition:
