WKOs verlinkbar machen
refs #12

--- a/config/locales/competition.de.yml
+++ b/config/locales/competition.de.yml
@@ -22,6 +22,7 @@ de:
         show_bib_numbers: Startnummern
         slug: URL-Bestandteil
         visible: Sichtbar
+        wko: WKO
     models:
       competition:
         one: Wettkampf
